soluzione quasi completa

--- a/.classpath
+++ b/.classpath
@@ -10,6 +10,7 @@
 	<classpathentry kind="lib" path="lib/c3p0-0.9.5.2.jar"/>
 	<classpathentry kind="lib" path="lib/jgrapht-core-1.0.1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/javafx"/>
-	<classpathentry kind="lib" path="/2018-09-12/lib/mysql-connector-java-8.0.15.jar"/>
+	<classpathentry kind="lib" path="/Users/matteomantione/Downloads/javafx-sdk-18.0.2/lib/javafx.controls.jar"/>
+	<classpathentry kind="lib" path="/2018-09-12/lib/mysql-connector-java-5.1.46-bin.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
